finally got all the overlapping issues solved

--- a/public/lowbar.css
+++ b/public/lowbar.css
@@ -14,6 +14,8 @@
 	position: relative;
 	bottom: 131px;
 	z-index:1;
+	top:-10px;
+	
 }
 
 .lowbar-menu li:after {
